minor changes in markdowns

--- a/exercise09.ipynb
+++ b/exercise09.ipynb
@@ -17,10 +17,8 @@
   },
   "cells": [
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "# %% [markdown]\n",
-        "\"\"\"\n",
         "# Exercise 9: Sentiment Classification with an MLP\n",
         "\n",
         "In this notebook, we will:\n",
@@ -30,10 +28,7 @@
         "4. Train and evaluate the model.\n",
         "\n",
         "We structure the code using Python classes, each explained in the Markdown cells that precede them.\n",
-        "\"\"\"\n",
         "\n",
-        "# %% [markdown]\n",
-        "\"\"\"\n",
         "## 0. Setup and Data Inspection\n",
         "\n",
         "You have your `aclImdb/` folder at a custom path. In Colab, first mount your Google Drive (or upload the folder) and set `data_root` accordingly.\n",
@@ -47,34 +42,11 @@
         "data_root = '/content/drive/MyDrive/aclImdb'\n",
         "```\n",
         "\n",
-        "Then run the cell to verify the folder and inspect file counts.\n",
-        "\"\"\"\n",
-        "# %%"
+        "Then run the cell to verify the folder and inspect file counts.\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 70
-        },
-        "id": "LNp3pfFmMLjZ",
-        "outputId": "bfc68884-69ce-4122-8cdf-4c260817b0a8"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "\"\\n## 0. Setup and Data Inspection\\n\\nYou have your `aclImdb/` folder at a custom path. In Colab, first mount your Google Drive (or upload the folder) and set `data_root` accordingly.\\n\\nFor example, if you mount your drive at `/content/drive`, and the data is in `Drive/MyDrive/aclImdb`, set:\\n```python\\n# In Colab:\\nfrom google.colab import drive\\ndrive.mount('/content/drive')\\n\\ndata_root = '/content/drive/MyDrive/aclImdb'\\n```\\n\\nThen run the cell to verify the folder and inspect file counts.\\n\""
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 27
-        }
-      ]
+        "id": "3DKpdpMdWFFS"
+      }
     },
     {
       "cell_type": "code",
@@ -5505,44 +5477,19 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "# %% [markdown]\n",
-        "\"\"\"\n",
         "## 1. Dataset loader\n",
         "\n",
         "\n",
         "We define a `IMDBDataset` class that:\n",
         "- Reads raw text files from `train/pos`, `train/neg`, `test/pos`, `test/neg` directories.\n",
         "- Uses a vectorizer (e.g., TF-IDF) to convert texts into feature vectors.\n",
-        "- Returns `(features, label)` pairs as PyTorch tensors.\n",
-        "\"\"\"\n",
-        "# %%"
+        "- Returns `(features, label)` pairs as PyTorch tensors."
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 53
-        },
-        "id": "E7zjsCwyMLa5",
-        "outputId": "38916678-a5c5-4361-9a00-3790d9ba6cff"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'\\n## 1. Dataset loader\\n\\n\\nWe define a `IMDBDataset` class that:\\n- Reads raw text files from `train/pos`, `train/neg`, `test/pos`, `test/neg` directories.\\n- Uses a vectorizer (e.g., TF-IDF) to convert texts into feature vectors.\\n- Returns `(features, label)` pairs as PyTorch tensors.\\n'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 40
-        }
-      ]
+        "id": "tqmIkT8dWfnL"
+      }
     },
     {
       "cell_type": "code",
@@ -5582,51 +5529,15 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "# %% [markdown]\n",
-        "\"\"\"\n",
         "## 2. Feature extraction\n",
         "\n",
-        "We use scikit-learn's `TfidfVectorizer` to convert raw texts into TF-IDF feature vectors. We'll fit on the training texts only, then transform both train and test splits.\n",
-        "\"\"\"\n",
-        "# %%"
+        "We use scikit-learn's `TfidfVectorizer` to convert raw texts into TF-IDF feature vectors. We'll fit on the training texts only, then transform both train and test splits."
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 53
-        },
-        "id": "2Z0E7AkqMLWK",
-        "outputId": "b45a9ca4-eacb-4f6b-ddf7-776fa3ad3ed0"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "\"\\n## 2. Feature extraction\\n\\nWe use scikit-learn's `TfidfVectorizer` to convert raw texts into TF-IDF feature vectors. We'll fit on the training texts only, then transform both train and test splits.\\n\""
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 42
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Both are good ways. The first one is easier to read :D"
-      ],
-      "metadata": {
-        "id": "VvetcHz8YVav"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "06wFIvY-Wiid"
+      }
     },
     {
       "cell_type": "code",
